--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This sample application includes embedding bootstrap, elasticsearch into a ruby on rails project
 
-Things you may want to cover:
+* I have used the following gems
+** gem 'boostrap-sass'
+** gem 'searchkick'
 
-* Ruby version
+You have to install elasticsearch before using the searchkick gem
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
